Fixtures removed List.of wg. Java 8